2019-12-23 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: fix spelling and minor bug fix

2019-12-23 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: only ask server for new current
   time every 10 seconds otherwise use cached value

2019-12-20 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: add methods to set/get state of TEC
   and set/get target detector temperature

2019-12-20 Magnus Hagdorn
 * piccolo3/client/PiccoloSpectrometer.py: check if TEC is present; add
   method to get current temperature

2019-12-10 Magnus Hagdorn
 * setup.py: install new program
 * piccolo3/ptriggered.py: add program to wait for trigger signal and start
   recording when received

2019-12-10 Magnus Hagdorn
 * piccolo3/client/__init__.py: move PiccoloSystem class to separate module
 * piccolo3/client/PiccoloSystem.py: moved from class from __init__.py

2019-12-10 Magnus Hagdorn
 * setup.py: install new program
 * piccolo3/ptimes.py: add program to list/modify integration times

2019-12-10 Magnus Hagdorn
 * piccolo3/precord.py: add logging; use CLI option class to handle command
   line options
 * piccolo3/client/PiccoloClientCfg.py: new module for handling CLI options

2019-12-10 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: introduce new base class that just
   handles the logging; add method to cancel running tasks; handle
   cancelled observations
 * piccolo3/client/__init__.py: add logging to PiccoloSystem class; add 
   method to shutdown piccolo system

2019-12-09 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: turn property into co-routine

2019-11-14 Mangus Hagdorn
 * piccolo-example.py: add simple example script

2019-11-14 Magnus Hagdorn
 * piccolo3/client/PiccoloBaseClient.py: add method to create tasks
 * piccolo3/client/Piccolo.py: use method to create tasks
 * piccolo3/client/PiccoloDataDir.py: ditto
 * piccolo3/client/PiccoloScheduler.py: ditto
 * piccolo3/client/PiccoloSpectrometer.py: ditto

2019-11-12 Magnus Hagdorn